test/sema/copyable-struct-mutate-in-nonmutating-func.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct A: Copyable {
    var s: int

    def a() {
        // CHECK: 8:10: error: cannot increment immutable value of type 'int'
        s++
    }
}
